add new changes

--- a/Web/web_page.html
+++ b/Web/web_page.html
@@ -49,7 +49,7 @@
     </tr>
 	<tr>
       <td>
-        <img src="img5.png" alt="Imagine exemplu 5" width="100" height="100">
+        <img src="imagini/img5.png" alt="Imagine exemplu 5" width="100" height="100">
       </td>
       <td>Georgescu</td>
       <td>Andrei</td>
@@ -57,7 +57,7 @@
     </tr>
 	 <tr>
       <td>
-        <img src="img4.png" alt="Imagine exemplu 4" width="100" height="100">
+        <img src="imagini/img4.png" alt="Imagine exemplu 4" width="100" height="100">
       </td>
       <td>Iliescu</td>
       <td>Ana</td>
@@ -65,7 +65,7 @@
     </tr>
 	 <tr>
       <td>
-        <img src="img2.png" alt="Imagine exemplu 2" width="100" height="100">
+        <img src="imagini/img2.png" alt="Imagine exemplu 2" width="100" height="100">
       </td>
       <td>Petrescu</td>
       <td>Vasile</td>
@@ -73,7 +73,7 @@
     </tr>
     <tr>
       <td>
-        <img src="img1.png" alt="Imagine exemplu 1" width="100" height="100">
+        <img src="imagini/img1.png" alt="Imagine exemplu 1" width="100" height="100">
       </td>
       <td>Popescu</td>
       <td>Ion</td>
